<resources>
    <string name="app_name">Login</string>
    <string name="account">账号</string>
    <string name="phoneHint">请输入手机号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册新账号</string>
    <string name="forgivePassword">忘记密码</string>
    <string name="anotherAccount">使用第三方账号登录</string>
    <string name="phone">手机号</string>
    <string name="getCode">获取验证码</string>
    <string name="inputCode">请输入验证码</string>
    <string name="nextStep">下一步</string>
    <string name="setPassword">设置新密码</string>
    <string name="confirmPassword">确认密码</string>
    <string name="passwordHint">请输入新密码</string>
    <string name="confirmPasswordHint">请再次输入密码</string>
    <string name="returnLogin">返回登录页面</string>
    <string name="name">姓名</string>
    <string name="nameHint">请输入您的姓名</string>
    <string name="college">学校</string>
    <string name="department">学院</string>
    <string name="type">身份</string>
    <string name="chooseCollegeHint">请选择您的学校</string>
    <string name="chooseDepartmentHint">请选择所在院系</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="teacher">教师</string>
    <string name="student">学生</string>
</resources>