<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">
    <data>
        <variable
            name="viewmodel"
            type="com.example.login.viewmodel.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="163dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginTabLayout">
            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="使用密码登录"
                tools:ignore="InvalidId"/>
            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="使用手机验证码登录"
                tools:ignore="InvalidId" />
        </com.google.android.material.tabs.TabLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/account"
                android:textStyle="bold"
                android:paddingStart="8dp"
                android:textColor="@color/design_default_color_primary"
                android:textSize="16sp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_text_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:background="@color/design_default_color_background"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:hint="@string/phoneHint"
                    android:text="@={viewmodel.loginAccount}" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/password_layout_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/password"
                    android:textStyle="bold"
                    android:paddingStart="8dp"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="16sp" />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    app:passwordToggleEnabled="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_text_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:background="@color/design_default_color_background"
                        android:hint="请输入密码"
                        android:inputType="textPassword"
                        android:text="@={viewmodel.loginPassword}" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/registerText"
                    style="@style/linkText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/register"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/forgivePasswordText"
                    style="@style/linkText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/forgivePassword"
                    app:layout_constraintBaseline_toBaselineOf="@id/registerText"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/code_layout_login"
            android:visibility="gone">
            <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/code_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/getCode_login"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/code_text_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/design_default_color_background"
                        android:paddingStart="8dp"
                        android:hint="请输入验证码"
                        android:inputType="number"
                        android:singleLine="true"
                        android:text="@={viewmodel.loginCode}" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/getCode_login"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="获取短信验证码"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/fastLoginText"
                    style="@style/linkText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="手机号快速注册"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>




        <Button
            android:id="@+id/loginButton"
            style="@style/buttonFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/login"
            app:backgroundTint="@android:color/holo_blue_dark"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/anotherAccount"
            />
    </LinearLayout>
</layout>
